# web-apps

./: .gitignore  .parcelrc  .taplo.toml  ARCHITECTURE.md  Cargo.toml  eslint.config.mjs  package-lock.json  package.json
.zed/: tasks.json
crates/app-server/: Cargo.toml  README.md
crates/app-server/src/: main.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  listmates.rs
crates/error-handling/: Cargo.toml
crates/error-handling/src/: lib.rs
crates/error-handling/templates/: error.html
crates/layout/templates/: layout.html
crates/listmates/: Cargo.toml
crates/listmates/src/: lib.rs
crates/listmates/templates/: home.html  layout.html  list.html
crates/newsletter/: Cargo.toml
crates/newsletter/src/: lib.rs
crates/web-server/: Cargo.toml
crates/web-server/src/: lb.rs  main.rs
migrations/: 20250709012601_init.down.sql  20250709012601_init.up.sql
scripts/listmates/database/: drop_tables.ts  initialize_schema.ts
src/: About.tsx  Counter.tsx  Home.tsx  Layout.tsx  base.css  client.tsx  response.ts  server.tsx
src/database/: database.ts  generated.ts  uuid.ts
src/listmates/: Listmates.tsx  router.tsx  table.ts  tables.ts
src/listmates/lists/: ListDetail.tsx  ListEdit.tsx  ListTableItem.tsx  Lists.tsx  ListsTable.tsx
src/listmates/lists/actions/: db.ts  server.ts
src/listmates/lists/archive/: ListArchive.tsx
src/listmates/lists/detail/: ListDetail.tsx  ListDetailItem.tsx  NewListItemForm.tsx
src/static/: index.css
