[package]
edition = "2024"
name = "database"
version = "0.1.0"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.6", features = [
    "chrono",
    "json",
    "macros",
    "postgres",
    "runtime-tokio",
    "uuid",
] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
